@@ -8,6 +8,10 @@
   are permitted in any medium without royalty provided the copyright
   notice and this notice are preserved.
 
+  As soon as this file is nontrivially modified, update
+  TEXINFO_DTD_VERSION in configure.ac (if not already done).
+  See comments there for explanation.
+  
   Original author: Philippe Martin.
 -->
 
